Airflow/logs/dag_id=dag_with_postgres_hooks/run_id=manual__2024-07-04T10:09:25.796858+00:00/task_id=extract/attempt=1.log
[2024-07-04T10:09:26.616+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-04T10:09:26.624+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_hooks.extract manual__2024-07-04T10:09:25.796858+00:00 [queued]>
[2024-07-04T10:09:26.626+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_hooks.extract manual__2024-07-04T10:09:25.796858+00:00 [queued]>
[2024-07-04T10:09:26.627+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2024-07-04T10:09:26.631+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): extract> on 2024-07-04 10:09:25.796858+00:00
[2024-07-04T10:09:26.634+0000] {warnings.py:112} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=174) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-07-04T10:09:26.635+0000] {standard_task_runner.py:63} INFO - Started process 176 to run task
[2024-07-04T10:09:26.635+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_hooks', 'extract', 'manual__2024-07-04T10:09:25.796858+00:00', '--job-id', '285', '--raw', '--subdir', 'DAGS_FOLDER/sql_2.py', '--cfg-path', '/tmp/tmp40evz7_t']
[2024-07-04T10:09:26.635+0000] {standard_task_runner.py:91} INFO - Job 285: Subtask extract
[2024-07-04T10:09:26.650+0000] {task_command.py:426} INFO - Running <TaskInstance: dag_with_postgres_hooks.extract manual__2024-07-04T10:09:25.796858+00:00 [running]> on host 73a0e5a00b20
[2024-07-04T10:09:26.680+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_EMAIL='***@example.com' AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='dag_with_postgres_hooks' AIRFLOW_CTX_TASK_ID='extract' AIRFLOW_CTX_EXECUTION_DATE='2024-07-04T10:09:25.796858+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-07-04T10:09:25.796858+00:00'
[2024-07-04T10:09:26.680+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-04T10:09:26.683+0000] {base.py:84} INFO - Using connection ID 'Postgres_server' for task execution.
[2024-07-04T10:09:26.688+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-04T10:09:26.688+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: unterminated quoted identifier at or near "" "
LINE 1: SELECT * FROM stock_categorical" 
                                       ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/sql_2.py", line 46, in transform_srcProduct
    df_old = pd.read_sql_query('SELECT * FROM stock_categorical" ', engine)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 486, in read_sql_query
    return pandas_sql.read_query(
           ^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 1776, in read_query
    result = self.execute(sql, params)
             ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/pandas/io/sql.py", line 1599, in execute
    return self.con.exec_driver_sql(sql, *args)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1770, in exec_driver_sql
    return self._exec_driver_sql(
           ^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1674, in _exec_driver_sql
    ret = self._execute_context(
          ^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1953, in _execute_context
    self._handle_dbapi_exception(
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 2134, in _handle_dbapi_exception
    util.raise_(
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/util/compat.py", line 211, in raise_
    raise exception
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/base.py", line 1910, in _execute_context
    self.dialect.do_execute(
  File "/home/airflow/.local/lib/python3.12/site-packages/sqlalchemy/engine/default.py", line 736, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) unterminated quoted identifier at or near "" "
LINE 1: SELECT * FROM stock_categorical" 
                                       ^

[SQL: SELECT * FROM stock_categorical" ]
(Background on this error at: https://sqlalche.me/e/14/f405)
[2024-07-04T10:09:26.694+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=dag_with_postgres_hooks, task_id=extract, run_id=manual__2024-07-04T10:09:25.796858+00:00, execution_date=20240704T100925, start_date=20240704T100926, end_date=20240704T100926
[2024-07-04T10:09:26.699+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 285 for task extract ((psycopg2.errors.SyntaxError) unterminated quoted identifier at or near "" "
LINE 1: SELECT * FROM stock_categorical" 
                                       ^

[SQL: SELECT * FROM stock_categorical" ]
(Background on this error at: https://sqlalche.me/e/14/f405); 176)
[2024-07-04T10:09:26.734+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-07-04T10:09:26.740+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-04T10:09:26.740+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
